# citescoop-cli

./: .clang-tidy  .codespellrc  .gitignore  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  about.html  about_8dox.html  annotated.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespaces.html  pages.html  searchdata-v2.js  tidy.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  tidy.json
cmake/: configured-files.cmake  dev-mode.cmake  gperf.cmake  install-rules.cmake  variables.cmake  version.h.in
docs/: Doxyfile.in
scripts/: lint.sh  tidy.sh
src/: cli.cc  cli.h  exceptions.h  help.cc  help.h  io.cc  io.h  langmap.cc  langmap.h  languages.gperf  lib.cc  lib.cpp  lib.h  main.cc  main.cpp  progress_stream_buf.cc  progress_stream_buf.h
src/commands/: base_command.cc  base_command.h  cat_command.cc  cat_command.h  combine_command.cc  combine_command.h  exceptions.h  extract_command.cc  extract_command.h  help_command.cc  help_command.h  meta_command.cc  meta_command.h
src/dump/: cat.cc  cat.h  combine.cc  combine.h  extract.cc  extract.h  meta.cc  meta.h  topic.cc  topic.h
src/openalex/: process.cc  process.h  topic.cc  topic.h
src/pbf/: cat.cc  cat.h  combine.cc  combine.h  meta.cc  meta.h  topic.cc  topic.h
test/: CMakeLists.txt
test/src/: citescoop-cli_test.cc  citescoop-cli_test.cpp
